# valobj

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
valobj/: Cargo.toml
valobj/src/: error.rs  lib.rs
valobj/tests/: compilation_test.rs  deref_test.rs  from_test.rs  getter_test.rs  normalization_test.rs  try_from_test.rs  validation_test.rs
valobj/tests/ui/attributes/: missing_normalize_test.rs  missing_normalize_test.stderr  missing_validate_test.rs  missing_validate_test.stderr  unknown_attribute_test.rs  unknown_attribute_test.stderr
valobj/tests/ui/tuple/: tuple_ctor_test.rs  tuple_ctor_test.stderr  tuple_private_field_test.rs  tuple_private_field_test.stderr  tuple_several_fields_test.rs  tuple_several_fields_test.stderr
valobj_macros/: Cargo.toml
valobj_macros/src/: builder.rs  config.rs  getter.rs  lib.rs  value_object.rs
