[package]
name = "valobj_macros"
version = "0.1.0"
edition = "2024"
description = "Macro implementation for the valobj crate."
repository = "https://github.com/ehorrent/valobj"
keywords = ["valobj", "value_object", "newtype"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.113", features = ["full"] }
proc-macro2 = "1.0.104"
ident_case = "1.0.1"
