[package]
name = "valobj_macros"
version = "0.1.1"
description = "Macro implementation for the valobj crate - you should depend on valobj, not valobj_macros."
documentation = "https://docs.rs/valobj"
readme = "../README.md"
edition = "2024"
repository = "https://github.com/ehorrent/valobj"
keywords = ["valobj", "value_object", "newtype"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.113", features = ["full"] }
proc-macro2 = "1.0.104"
ident_case = "1.0.1"
